--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "my-website",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon --watch"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +17,14 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
+    "fs": "0.0.1-security",
     "jquery": "^3.3.1",
     "multer": "^1.4.1",
-    "sqlite3": "^4.0.2"
+    "session-file-store": "^1.2.0",
+    "sqlite3": "^4.0.2",
+    "validator": "^10.8.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.4"
   }
 }
