--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "my-website", 
-  "version": "1.0.0", 
-  "description": "", 
-  "main": "app.js", 
+  "name": "my-website",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1", 
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --watch"
-  }, 
-  "keywords": [], 
-  "author": "", 
-  "license": "ISC", 
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.3.1", 
-    "bcryptjs": "^2.4.3", 
-    "body-parser": "^1.18.3", 
-    "express": "^4.16.3", 
-    "express-handlebars": "^3.0.0", 
-    "express-session": "^1.15.6", 
-    "fs": "0.0.1-security", 
-    "jquery": "^3.3.1", 
-    "multer": "^1.4.1", 
-    "session-file-store": "^1.2.0", 
-    "sqlite3": "^4.0.2", 
+    "@fortawesome/fontawesome-free": "^5.3.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "csurf": "^1.9.0",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
+    "fs": "0.0.1-security",
+    "jquery": "^3.3.1",
+    "multer": "^1.4.1",
+    "session-file-store": "^1.2.0",
+    "sqlite3": "^4.0.2",
     "validator": "^10.8.0"
-  }, 
+  },
   "devDependencies": {
     "nodemon": "^1.18.4"
   }
