--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "csurf": "^1.9.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "express-paginate": "^1.0.0",
     "express-session": "^1.15.6",
     "fs": "0.0.1-security",
     "jquery": "^3.3.1",
